etc/iptables/standard/rules.v4
*filter

# Allow all loopback traffic and reject traffic
# to localhost that does not originate from lo
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j REJECT
-A OUTPUT -o lo -j ACCEPT

# Allow ping and ICMP error returns
-A INPUT -p icmp -m conntrack --ctstate NEW --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

# Allow ens3 (Necessary when using Hetzner otherwise server won't boot properly)
-A OUTPUT -o ens3 -j ACCEPT
-A INPUT -i ens3 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Allow DNS
-A INPUT -i eth0 -p udp -m conntrack --ctstate ESTABLISHED --sport 53 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m conntrack --ctstate NEW,ESTABLISHED --dport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate ESTABLISHED --sport 53 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 53 -j ACCEPT

# Allow outgoing web traffic
-A INPUT -i eth0 -p tcp -m conntrack --ctstate ESTABLISHED --sport 80 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate ESTABLISHED --sport 443 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 443 -j ACCEPT

# Allow SSH Server
-A INPUT -i eth0 -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 22 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m conntrack --ctstate ESTABLISHED --sport 22 -j ACCEPT

# Allow VPN Server
-A INPUT -i eth0 -p udp -m conntrack --ctstate NEW,ESTABLISHED --dport 1194 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m conntrack --ctstate ESTABLISHED --sport 1194 -j ACCEPT

# Allow SSH over VPN
-A INPUT -i tun0 -p tcp -m conntrack --ctstate NEW,ESTABLISHED --dport 22 -j ACCEPT
-A OUTPUT -o tun0 -p tcp -m conntrack --ctstate ESTABLISHED --sport 22 -j ACCEPT

# Allow traffic on tun0
-A INPUT -i tun0 -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT

# Allow forwarding traffic only from the VPN
-A FORWARD -i tun0 -o eth0 -s 10.8.1.0/24 -j ACCEPT
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Allow docker communication
-A INPUT -s 172.0.0.0/8 -i br-+ -j ACCEPT
-A FORWARD -s 172.0.0.0/8 -i br-+ -j ACCEPT
-A OUTPUT -o br-+ -j ACCEPT

# Log all denied packets
#-A INPUT -m limit --limit 2/min -j LOG --log-prefix "iptables_INPUT_denied: " --log-level 4
#-A FORWARD -m limit --limit 2/min -j LOG --log-prefix "iptables_FORWARD_denied: " --log-level 4
#-A OUTPUT -m limit --limit 2/min -j LOG --log-prefix "iptables_OUTPUT_denied: " --log-level 4

# Reject packets with ICMP error return
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j REJECT

COMMIT


*nat

-A POSTROUTING -s 10.8.1.0/24 -o eth0 -j MASQUERADE

COMMIT
